--- a/swimsite/uwsgi.ini
+++ b/swimsite/uwsgi.ini
@@ -4,7 +4,7 @@ module=swimsite.wsgi:application
 master=true
 pidfile=/home/tanaka/swimsite/uwsgi.pid
 enable-threads=true
-socket=/tmp/uwsgi.sock
+socket=/home/tanaka/swimsite/uwsgi.sock
 #http=127.0.0.1:8080
 processes=1
 harakiri=50
