--- a/swimsite/swimsite/pro_settings.py.sample
+++ b/swimsite/swimsite/pro_settings.py.sample
@@ -5,6 +5,7 @@ DEBUG = False
 ALLOWED_HOSTS = [
     'localhost',
     '127.0.0.1',
+    # サーバのIPを追加する
 ]
 
 STATIC_ROOT = '/usr/share/nginx/html/static'
